fix: gap in team card

--- a/src/core/styles/globals.scss
+++ b/src/core/styles/globals.scss
@@ -11,6 +11,7 @@ body {
   -webkit-font-feature-settings: "lnum";
   -moz-font-feature-settings: "lnum";
   font-feature-settings: "lnum";
+  line-height: 120%;
 }
 
 .container {
