--- a/src/entities/Team/ui/Team/Team.module.scss
+++ b/src/entities/Team/ui/Team/Team.module.scss
@@ -29,13 +29,14 @@
         max-width: 154px;
         display: flex;
         flex-direction: column;
-        gap: 20px;
+        // gap: 20px;
 
         .personaInfo {
           display: flex;
           flex-direction: column;
           align-items: flex-start;
           justify-content: space-between;
+          margin-top: 20px;
 
           .persona__name {
             display: flex;
